scribble/scribble-assertions/src/test/resources/good/extensions/annotations/RecWithAnnot.scr
module good.extensions.annotations.RecWithAnnot;


type <java> "java.lang.integer" from "rt.jar" as int;
type <java> "java.lang.Long" from "rt.jar" as Long;

// Recursion with Annotations (Simple)
/*global protocol ProtSimple(role C, role S)
{
rec Loop {
	ADD(x:int) from C to S;
	continue Loop; 
	//ADD(y:integer) from C to S;
	} 
}*/
global protocol ProtSimple(role C, role S)
{
	ADD(x:int) from C to S;
	do ProtSimple(C, S); 
}




// FIXME: make separate test
// Recursion with Annotations (Complicated)
global protocol ProtComplex(role A, role B, role C)
{
rec Loop {
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		 
	} or {
		RES(y:int) from A to B;
		RES(z:int) from B to C; 
		continue Loop;
		}
	}
	
	RES(z) from B to C;   // FIXME: only need z on all exit loops -- motivation for model checking based WF
}
