scribble/scribble-assertions/src/test/resources/bad/extensions/annotations/RepeatedPayloads.scr
module bad.extensions.annotations.RepeatedPayloads;


type <java> "java.lang.int" from "rt.jar" as int;
type <java> "java.lang.Long" from "rt.jar" as Long;


// Repeated Payloads error
global protocol Prot(role C, role S)
{
	ADD(x:int) from C to S;
	RES(x:int) from C to S;   // (Original) idea is repeat var decl in "same scope" shouldn't be allowed (cf. same var decl in choice cases, e.g., good.extensions.annotations.ChoiceWithAnnot)
}

/*
global protocol Prot(role A, role B, role C)
{
rec Loop {
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		 
	} or {
		RES(y:int) from A to B;
		RES(z:int) from B to C; 
		continue Loop;
		}
	}
	
	RES(z) from B to C; 
}
*/
/*
// Complicated Message flow
global protocol Prot(role S, role B, role C, role D)
{
	ADD(x:int) from C to S;
	Add(x) from S to B; 
	
	ADD(x) from C to B;
	
	Add(y:int) from C to D; 
	
	Add(x) from B to D; 
	
	Add(y) from D to S;  
}*/

/*
global protocol Prot(role A, role B, role C)
{
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;  
	} or {
		RES(y:int) from A to B;
		RES(z:int) from B to C;
	}

	// RES(y) from B to C; - is not ok 
	RES(y) from B to C; 
}
*/
/*
global protocol Prot(role A, role B, role C)
{
rec Loop {
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		 
	} or {
		RES(y:int) from A to B;
		RES(z:int) from B to C; 
		continue Loop;
		}
	}
	
	RES(z) from B to C; 
}*/